fixed teaser decription on mobile, updated bundle

--- a/src/operun/frontpage/browser/static/frontpage-compiled.css
+++ b/src/operun/frontpage/browser/static/frontpage-compiled.css
@@ -51,7 +51,6 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 }
 .news-item {
   float: left;
-  min-height: 360px;
   margin-bottom: 20px;
 }
 .news-title {
@@ -68,9 +67,15 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   width: 100%;
   height: auto;
 }
+@media (max-width: 767px) {
+  .teaser-description {
+    display: none;
+  }
+}
 @media (min-width: 768px) and (max-width: 991px) {
   .news-item {
     width: 350px;
+    min-height: 360px;
     margin-right: 20px;
   }
   .news-item:nth-child(2n) {
@@ -80,6 +85,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 @media (min-width: 992px) and (max-width: 1199px) {
   .news-item {
     width: 460px;
+    min-height: 360px;
     margin-right: 20px;
   }
   .news-item:nth-child(2n) {
@@ -89,6 +95,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 @media (min-width: 1200px) {
   .news-item {
     width: 366px;
+    min-height: 360px;
     margin-right: 21px;
   }
   .news-item:nth-child(3n) {
