--- a/src/operun/frontpage/browser/static/frontpage.less
+++ b/src/operun/frontpage/browser/static/frontpage.less
@@ -84,6 +84,14 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   height: auto;
 }
 
+@media (max-width: 767px) {
+
+    .teaser-description {
+        display: none;
+    }
+
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
 
     .news-item {
